Fixing Overflow Issue on Components

--- a/global-assets/source/_patterns/00-nds/02-molecules/navigation/navigation-tabs/navigation-tabs.scss
+++ b/global-assets/source/_patterns/00-nds/02-molecules/navigation/navigation-tabs/navigation-tabs.scss
@@ -3,6 +3,15 @@
         display: inline-flex;
         padding: $s-0-50 $s-1-50;
         border-bottom: $s-0-25 solid transparent;
+        cursor: pointer;
+        &:hover,
+        &:focus,
+        &:visited {
+            color: $type-link;
+            &:visited {
+                color: $type-link;
+            }
+        }
         &.active {
             border-bottom: $s-0-25 solid $type-link;
         }
